# lab_1

./: .gitignore  CMakeLists.txt  README.md
src/: aggregates.cpp  aggregates.hpp  caretaker.cpp  caretaker.hpp  custom_shape.cpp  custom_shape.hpp  main.cpp  memento.hpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
